Taxonomy alignment issue fixed

--- a/src/blocks/post/style.scss
+++ b/src/blocks/post/style.scss
@@ -16,7 +16,7 @@
 		.uagb-post__taxonomy {
 
 			&.default {
-				margin: 5px 5px 5px 0px;
+				margin: 5px 5px 5px 0;
 			}
 
 			&.highlighted {
